--- a/01-calculator/index.html
+++ b/01-calculator/index.html
@@ -5,64 +5,69 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+		<link href="./style.css" rel="stylesheet">
 		
+			<script type="text/javascript" src="./script.js"></script>
 	</head>
 	<body>
 		<h1>Calculator</h1>
 		<div id="container-fluid">
+			<div id="calc_row">
+				<input id="ausgabe" name="ausgabe" type="text" width="100%">
+			</div>
 			<div class="calc_row">
-				<button class="digit" value="1">
+				<button class="digit" name="T1" value="1" onclick="Anzeige('1')">
 				1
 				</button>
-				<button class="digit" value="2">
+				<button class="digit" name="T2" value="2">
 				2
 				</button>
-				<button class="digit" value="3">
+				<button class="digit" name="T3" value="3">
 				3
 				</button>
-				<button class="sign" value="x">
+				<button class="sign" name="Tmal" value="x">
 				x
 				</button>
 			</div>
 			<div class="calc_row">
-				<button class="digit" value="4">
+				<button class="digit" name="T4" value="4">
 				4
 				</button>
-				<button class="digit" value="5">
+				<button class="digit" name="T5" value="5">
 				5
 				</button>
-				<button class="digit" value="6">
+				<button class="digit" name="T6" value="6">
 				6
 				</button>
-				<button class="sign" value="/">
+				<button class="sign" name="Tdiv" value="/">
 				/
 				</button>
 			</div>
 			<div class="calc_row">
-				<button class="digit" value="7">
+				<button class="digit" name="T7" value="7">
 				7
 				</button>
-				<button class="digit" value="8">
+				<button class="digit" name="T8" value="8">
 				8
 				</button>
-				<button class="digit" value="9">
+				<button class="digit" name="T9" value="9">
 				9
 				</button>
-				<button class="sign" value="+">
+				<button class="sign" name="Tplus" value="+">
 				+
 				</button>
 			</div>
 			<div class="calc_row">
-				<button class="digit" value="0">
+				<button class="digit" name="T0" value="0">
 				0
 				</button>
-				<button class="leer" value="">
-				&nbsp
+				<button class="leer" name="Tres" value="=">
+				=
 				</button>
-				<button class="sign" value="<">
+				<button class="sign" name="Tz" value="<">
 				<-
 				</button>
-				<button class="sign" value="-">
+				<button class="sign" name="Tminus" value="-">
 				-
 				</button>
 			</div>
