--- a/01-calculator/index.html
+++ b/01-calculator/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<h1>Calculator</h1>
-		<div class="container-fluid">
+		<div class="container text-center">
 			<div id="calc_row">
 				<input id="ausgabe" name="ausgabe" type="text" width="100%">
 			</div>
