Ausgabe weiter entwickelt

--- a/01-calculator/index.html
+++ b/01-calculator/index.html
@@ -13,7 +13,7 @@
 		<h1>Calculator</h1>
 		<div class="container text-center">
 			<div id="calc_row">
-				<input id="ausgabe" name="ausgabe" type="text" width="100%">
+				<input id="ausgabe" name="Ausgabe" type="text" width="100%">
 			</div>
 			<div class="calc_row">
 				<button class="digit" name="T1" value="1" onclick="Anzeige('1')">
