--- a/01-calculator/index.html
+++ b/01-calculator/index.html
@@ -19,55 +19,55 @@
 				<button class="digit" name="T1" value="1" onclick="Anzeige('1')">
 				1
 				</button>
-				<button class="digit" name="T2" value="2">
+				<button class="digit" name="T2" value="2" onclick="Anzeige('2')">
 				2
 				</button>
-				<button class="digit" name="T3" value="3">
+				<button class="digit" name="T3" value="3" onclick="Anzeige('3')">
 				3
 				</button>
-				<button class="sign" name="Tmal" value="x">
+				<button class="sign" name="Tmal" value="x" onclick="Rechnen('Tmal')">
 				x
 				</button>
 			</div>
 			<div class="calc_row">
-				<button class="digit" name="T4" value="4">
+				<button class="digit" name="T4" value="4" onclick="Anzeige('4')">
 				4
 				</button>
-				<button class="digit" name="T5" value="5">
+				<button class="digit" name="T5" value="5" onclick="Anzeige('5')">
 				5
 				</button>
-				<button class="digit" name="T6" value="6">
+				<button class="digit" name="T6" value="6"onclick="Anzeige('6')">
 				6
 				</button>
-				<button class="sign" name="Tdiv" value="/">
+				<button class="sign" name="Tdiv" value="/" onclick="Rechnen('Tdiv')">
 				/
 				</button>
 			</div>
 			<div class="calc_row">
-				<button class="digit" name="T7" value="7">
+				<button class="digit" name="T7" value="7" onclick="Anzeige('7')">
 				7
 				</button>
-				<button class="digit" name="T8" value="8">
+				<button class="digit" name="T8" value="8" onclick="Anzeige('8')">
 				8
 				</button>
-				<button class="digit" name="T9" value="9">
+				<button class="digit" name="T9" value="9" onclick="Anzeige('9')">
 				9
 				</button>
-				<button class="sign" name="Tplus" value="+">
+				<button class="sign" name="Tplus" value="+" onclick="Rechnen('Tplus')">
 				+
 				</button>
 			</div>
 			<div class="calc_row">
-				<button class="digit" name="T0" value="0">
+				<button class="digit" name="T0" value="0" onclick="Anzeige('0')">
 				0
 				</button>
-				<button class="leer" name="Tres" value="=">
+				<button class="leer" name="Tres" value="=" onclick="Rechnen('Tres')">
 				=
 				</button>
-				<button class="sign" name="Tz" value="<">
+				<button class="sign" name="Tz" value="<" onclick="Rechnen('Tz')">
 				<-
 				</button>
-				<button class="sign" name="Tminus" value="-">
+				<button class="sign" name="Tminus" value="-" onclick="Rechnen('Tminus')">
 				-
 				</button>
 			</div>
