--- a/01-calculator/index.html
+++ b/01-calculator/index.html
@@ -25,7 +25,7 @@
 				<button class="digit" name="T3" value="3" onclick="Anzeige('3')">
 				3
 				</button>
-				<button class="sign" name="Tmal" value="x" onclick="Rechnen('Tmal')">
+				<button class="sign" name="Tmal" value="x" onclick="Verteiler('Tmal')">
 				x
 				</button>
 			</div>
@@ -39,7 +39,7 @@
 				<button class="digit" name="T6" value="6"onclick="Anzeige('6')">
 				6
 				</button>
-				<button class="sign" name="Tdiv" value="/" onclick="Rechnen('Tdiv')">
+				<button class="sign" name="Tdiv" value="/" onclick="Verteiler('Tdiv')">
 				/
 				</button>
 			</div>
@@ -53,7 +53,7 @@
 				<button class="digit" name="T9" value="9" onclick="Anzeige('9')">
 				9
 				</button>
-				<button class="sign" name="Tplus" value="+" onclick="Rechnen('Tplus')">
+				<button class="sign" name="Tplus" value="+" onclick="Verteiler('Tplus')">
 				+
 				</button>
 			</div>
@@ -61,13 +61,13 @@
 				<button class="digit" name="T0" value="0" onclick="Anzeige('0')">
 				0
 				</button>
-				<button class="leer" name="Tres" value="=" onclick="Rechnen('Tres')">
+				<button class="leer" name="Tres" value="=" onclick="Verteiler('Tres')">
 				=
 				</button>
-				<button class="sign" name="Tz" value="<" onclick="Rechnen('Tz')">
+				<button class="sign" name="Tz" value="<" onclick="Verteiler('Tz')">
 				<-
 				</button>
-				<button class="sign" name="Tminus" value="-" onclick="Rechnen('Tminus')">
+				<button class="sign" name="Tminus" value="-" onclick="Verteiler('Tminus')">
 				-
 				</button>
 			</div>
