--- a/02-todo-list/index.html
+++ b/02-todo-list/index.html
@@ -1,1 +1,37 @@
-<!DOCTYPE html><html><head><title>Todo List</title></head><body><h1>Todo List</h1></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Todo List</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+		<link href="./style.css" rel="stylesheet">
+		
+			<script type="text/javascript" src="./script.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <div class="content text-left">
+                <div class = "header">
+                    <h1>Todo List</h1>
+                </div>
+                <div id="addInput" class="content text-left">
+                    <label class="form-label">
+                        Eingabe toDo's
+                    </label>
+                    <input id="inputTask" class = "form-controls" placeholder="Task">
+                    <button id="sendButton" class="btn btn-pimary" onclick="addInput">
+                        Speichern
+                    </button>
+                </div>
+                <div id="renderTasks">
+                    &nbsp;
+                    <!--AUsgabe-->
+                </div>
+                <div id="listen">
+
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
